--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -3,30 +3,37 @@ input {
       # PROF TOKENS
       consumer_key => "aBSmvhViNyM3HdDRVv4j3VXlc"
       consumer_secret => "iW7flg2FzvAQqZc9YAzUe7NovcLFMqhFWt7XyySJuF6t40ZX3y"
-      oauth_token => "113286276-hlQpOiFv3nbQkg8vkSP3vxYPsB4omg5zKpvE4CT7"
-      oauth_token_secret => "HHlBkrrJjISAXrPbCeUIK4PJmTYdP31BGuyxPBqBj62MQ"
+      oauth_token => "113286276-4AlJwwyuRAxxNxh5YiS96N5o0bB8p8QhJJw4c4p5"
+      oauth_token_secret => "mgoRyFCqQFe8ec097DjW73u9XV3FaYsuHs9CaJdzA5two"
       
       # MY TOKENS   
-      # consumer_key => "YwzHxCKQncOURtJOHc0ry2Gqk"
-      # consumer_secret => "rvdmwcF9CBZtOqIBENWwWwYnubA3jhXqz21GfFq9I3ouRAn27C"
-      # oauth_token => "1498933040898363397-V4mKh2jo4PQfZvCvFH7V8igOPWdmmm"
-      # oauth_token_secret => "gbuchLJ5WjfDjsjX5TTvnNYKORS2kb3WHkGKI2EoqhYvI"
-      # to use 1% sampled random tweets stream
+      # consumer_key => "cQVAxxj92d3nHPtg2Ckk7Vh0U"
+      # consumer_secret => "UZnZztCivcIuuOhhmr5Wwe3KIbPZIBPlspiD4HnIxNJ0283txj"
+      # oauth_token => "1498933040898363397-uINtcSmqwEBPNPYfHrLQXiHIb576N5"
+      # oauth_token_secret => "UsjgIdFhWYB2veR2WEYfeEjhLoQI3sCkWy15uYmJPJgu8"
 
       # keywords => ["#Texas"]
 
+      # to use 1% sampled random tweets stream
       use_samples => true
-      full_tweet => false
+      full_tweet => true
       ignore_retweets => true
   }
 }
 
+  filter {
+      # sleep {
+      #   time => "1"   # Sleep 1 second
+      #   every => 10   # on every 10th event
+      # }
+    }
+
 output 
 {
   stdout {}
-  # kafka {
-  #     bootstrap_servers => 10.0.100.32:9092
-  #     codec => json
-  #     topic_id => "sample-tweets"
-  #   }
+  kafka {
+      bootstrap_servers => "10.0.100.32:9092"
+      codec => json
+      topic_id => "sample-tweets"
+    }
 }
