feat: add pyspark application and refactor compose

--- a/spark-local/setup-driver/Dockerfile
+++ b/spark-local/setup-driver/Dockerfile
@@ -6,21 +6,17 @@ ENV PATH $SPARK_DIR/bin:$SPARK_DIR/sbin:$PATH
 ADD setup/spark-${SPARK_VERSION}-bin-hadoop3.2.tgz /opt
 RUN apt-get update && apt-get -y install bash && apt-get -y install procps
 # pyspark dependecies
-RUN apt-get -y install python3.9 
+RUN apt-get -y install python3.9 && apt-get -y install pip
+RUN python3 -m pip install elasticsearch && pip install numpy && pip install pyspark==3.0.2 && pip install spark-nlp==3.0.3
 
 RUN mv /opt/spark-${SPARK_VERSION}-bin-hadoop3.2 ${SPARK_DIR}
+RUN mkdir -p tap-project/code
 
-ADD setup-master/spark-env.sh ${SPARK_DIR}/conf
-ADD setup-master/start.sh ${SPARK_DIR}/bin
+ADD setup-driver/start.sh ${SPARK_DIR}/bin
 
-# remove windows endline
 RUN sed -i -e 's/\r$//' ${SPARK_DIR}/bin/start.sh
-
-# master port
-EXPOSE 7077
-# web ui
-EXPOSE 8081
 
 WORKDIR ${SPARK_DIR}
 ENTRYPOINT [ "start.sh"]
+
 
