--- a/compose.yaml
+++ b/compose.yaml
@@ -15,13 +15,19 @@ services:
     container_name: kafka-broker
     ports:
       - 9092:9092
+      - '29092:29092'
     depends_on:
       - zookeeper
     environment:  
       KAFKA_BROKER_ID: 1
+      CONNECT_BOOTSTRAP_SERVERS: localhost:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker:9092,PLAINTEXT_INTERNAL://kafka-broker:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      #  Kafka broker listens on localhost:9092 for access from your host machine and on 10.0.100.32:29092 for access from other containers
+      #  listener for internal use was set to explicit ip to permit local spark driver script execution. netsh interface ip add address "Loopback" 10.0.100.32,
+      #  because driver outside docker will connect to kafka, and then pass url to internal docker spark worker
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://10.0.100.32:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
@@ -42,7 +48,7 @@ services:
     environment:
       SERVER_PORT: 8080
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker:29092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
     networks: 
       tap: 
@@ -79,6 +85,9 @@ services:
     networks:
       tap:
         ipv4_address: 10.0.100.34
+    volumes:
+      - spark-code:/opt/tap-project/code/
+
         
   spark-worker: 
     build:
@@ -98,7 +107,19 @@ services:
     networks:
       tap:
         ipv4_address: 10.0.100.35
+
+  spark-driver: 
+    build:
+      context: ./spark-local
+      dockerfile: setup-driver/Dockerfile 
+    container_name: spark-driver
+    networks:
+      tap:
+        ipv4_address: 10.0.100.38
+    volumes:
+    - spark-code:/opt/tap-project/code/
   # END spark cluster setup
+
   elastic-search: 
     container_name: elastisearch
     image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
@@ -113,6 +134,19 @@ services:
     ports:
       - 9200:9200
 
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.11.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elastisearch:9200
+    networks:
+      tap:
+        ipv4_address: 10.0.100.37
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
+
 volumes:
   logstash-pipeline: 
     driver: local
@@ -121,6 +155,13 @@ volumes:
       type: none
       # MODFIY FOR YOUR ENVIRONMENT
       device: C:\Users\IgnazioGulino\Desktop\IG\TAP\progettoTAP\logstash\pipeline
+  spark-code:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      # MODFIY FOR YOUR ENVIRONMENT
+      device: C:\Users\IgnazioGulino\Desktop\IG\TAP\progettoTAP\spark-local\code
 
 networks:
   tap:
