--- a/spark-local/setup-worker/Dockerfile
+++ b/spark-local/setup-worker/Dockerfile
@@ -13,6 +13,7 @@ ADD setup-worker/start.sh ${SPARK_DIR}/bin
 
 # remove windows endline
 RUN sed -i -e 's/\r$//' ${SPARK_DIR}/bin/start.sh
+RUN ["chmod", "+x", "/opt/spark/bin/start.sh"]
 
 # worker listen port
 EXPOSE 7078
