fix: fix spark conf for google-cloud 32gb VM setup

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,39 +1,39 @@
-input {
-  twitter {
-      # PROF TOKENS
-      consumer_key => "aBSmvhViNyM3HdDRVv4j3VXlc"
-      consumer_secret => "iW7flg2FzvAQqZc9YAzUe7NovcLFMqhFWt7XyySJuF6t40ZX3y"
-      oauth_token => "113286276-4AlJwwyuRAxxNxh5YiS96N5o0bB8p8QhJJw4c4p5"
-      oauth_token_secret => "mgoRyFCqQFe8ec097DjW73u9XV3FaYsuHs9CaJdzA5two"
+# input {
+#   twitter {
+#       # PROF TOKENS
+#       consumer_key => "aBSmvhViNyM3HdDRVv4j3VXlc"
+#       consumer_secret => "iW7flg2FzvAQqZc9YAzUe7NovcLFMqhFWt7XyySJuF6t40ZX3y"
+#       oauth_token => "113286276-4AlJwwyuRAxxNxh5YiS96N5o0bB8p8QhJJw4c4p5"
+#       oauth_token_secret => "mgoRyFCqQFe8ec097DjW73u9XV3FaYsuHs9CaJdzA5two"
       
-      # MY TOKENS   
-      # consumer_key => "cQVAxxj92d3nHPtg2Ckk7Vh0U"
-      # consumer_secret => "UZnZztCivcIuuOhhmr5Wwe3KIbPZIBPlspiD4HnIxNJ0283txj"
-      # oauth_token => "1498933040898363397-uINtcSmqwEBPNPYfHrLQXiHIb576N5"
-      # oauth_token_secret => "UsjgIdFhWYB2veR2WEYfeEjhLoQI3sCkWy15uYmJPJgu8"
+#       # MY TOKENS   
+#       # consumer_key => "cQVAxxj92d3nHPtg2Ckk7Vh0U"
+#       # consumer_secret => "UZnZztCivcIuuOhhmr5Wwe3KIbPZIBPlspiD4HnIxNJ0283txj"
+#       # oauth_token => "1498933040898363397-uINtcSmqwEBPNPYfHrLQXiHIb576N5"
+#       # oauth_token_secret => "UsjgIdFhWYB2veR2WEYfeEjhLoQI3sCkWy15uYmJPJgu8"
 
-      # keywords => ["#Texas"]
+#       # keywords => ["#Texas"]
 
-      # to use 1% sampled random tweets stream
-      use_samples => true
-      full_tweet => true
-      ignore_retweets => true
-  }
-}
+#       # to use 1% sampled random tweets stream
+#       use_samples => true
+#       full_tweet => true
+#       ignore_retweets => true
+#   }
+# }
 
-  filter {
-      # sleep {
-      #   time => "1"   # Sleep 1 second
-      #   every => 10   # on every 10th event
-      # }
-    }
+#   filter {
+#       # sleep {
+#       #   time => "1"   # Sleep 1 second
+#       #   every => 10   # on every 10th event
+#       # }
+#     }
 
-output 
-{
-  stdout {}
-  kafka {
-      bootstrap_servers => "10.0.100.32:9092"
-      codec => json
-      topic_id => "sample-tweets"
-    }
-}
+# output 
+# {
+#   stdout {}
+#   kafka {
+#       bootstrap_servers => "kafka-broker:29092"
+#       codec => json
+#       topic_id => "sample-tweets"
+#     }
+# }
