--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - zookeeper
     environment:  
       KAFKA_BROKER_ID: 1
-      CONNECT_BOOTSTRAP_SERVERS: localhost:9092
+      CONNECT_BOOTSTRAP_SERVERS: kafka-broker:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
