--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,32 +1,16 @@
 # input {
 #   twitter {
 #       # PROF TOKENS
-#       consumer_key => "aBSmvhViNyM3HdDRVv4j3VXlc"
-#       consumer_secret => "iW7flg2FzvAQqZc9YAzUe7NovcLFMqhFWt7XyySJuF6t40ZX3y"
-#       oauth_token => "113286276-4AlJwwyuRAxxNxh5YiS96N5o0bB8p8QhJJw4c4p5"
-#       oauth_token_secret => "mgoRyFCqQFe8ec097DjW73u9XV3FaYsuHs9CaJdzA5two"
-      
-#       # MY TOKENS   
-#       # consumer_key => "cQVAxxj92d3nHPtg2Ckk7Vh0U"
-#       # consumer_secret => "UZnZztCivcIuuOhhmr5Wwe3KIbPZIBPlspiD4HnIxNJ0283txj"
-#       # oauth_token => "1498933040898363397-uINtcSmqwEBPNPYfHrLQXiHIb576N5"
-#       # oauth_token_secret => "UsjgIdFhWYB2veR2WEYfeEjhLoQI3sCkWy15uYmJPJgu8"
-
-#       # keywords => ["#Texas"]
-
-#       # to use 1% sampled random tweets stream
+#       consumer_key => "${LOGSTASH_CONS_KEY}"
+#       consumer_secret => "${LOGSTASH_CONS_SECRET}"
+#       oauth_token => "${LOGSTASH_OAUTH_KEY}"
+#       oauth_token_secret => "${LOGSTASH_OAUTH_SECRET}"
+#        # to use 1% sampled random tweets stream
 #       use_samples => true
 #       full_tweet => true
 #       ignore_retweets => true
 #   }
 # }
-
-#   filter {
-#       # sleep {
-#       #   time => "1"   # Sleep 1 second
-#       #   every => 10   # on every 10th event
-#       # }
-#     }
 
 # output 
 # {
